# guapish-bot

./: .env-example.txt  .gitignore  README.md  bot.py  pyproject.toml  run
models/: README.md  metadata.json  request.json
src/: helpers.py
src/models/: app_config.py  firebase_config.py  guapish_bot.py  pagination_view.py
