[tool.poetry]
name = "movie-request-bot"
version = "0.1.0"
description = ""
authors = ["lavaskin <lavaskin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.6.0"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
