[tool.poetry]
name = "guapish-bot"
version = "0.1.0"
description = ""
authors = ["lavaskin <lavaskin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
py-cord = "^2.8"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
